Tue Oct 19 03:08:52 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vsnprintf.c (BSD_vfprintf): use HEXPREFIX flag for prefix of %a.
	  [ruby-core:32841]

Mon Oct 18 13:18:01 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/digest.c (rb_digest_class_init): Define
	  Digest::Class.new(). [Feature #3954]

Mon Oct 18 12:58:40 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_pack): refine the document.  [ruby-dev:42397]
	  (pack_unpack): ditto.

Mon Oct 18 10:19:00 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (transport_request): @socket may be nil.
	  patched by Egbert Eich [ruby-core:32829]

Mon Oct 18 09:57:28 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* sprintf.c (BSD_vfprintf): wrong padding arround prefix and
	  floating point with %a. [ruby-dev:42403] Bug #3956

Sun Oct 17 22:36:33 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/delta.rb: added an rdoc tag.

Sun Oct 17 10:47:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_mod_remove_const): update rdoc.
	  [ruby-core:31957]

Sun Oct 17 10:40:17 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_define_{class,module}_id_under): register to be
	  marked, which probably are defined and used internally.

Sat Oct 16 11:10:55 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_encoding2cp): set codepage 20936
	  according to GB2312. [Bug #3937] [ruby-core:32758]

Sat Oct 16 10:54:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (CPP): already used in .c.i rule.

	* cygwin/GNUmakefile.in (DLLWRAP, WINDRES): add --driver-name and
	  --preprocessor options explicitly.  [ruby-core:32776]

Sat Oct 16 10:06:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/sdbm/_sdbm.c (SEEDUPS, BADMESS): make settable using command
	  line options.

	* ext/sdbm/_sdbm.c (makroom): suppress unused result warning.

	* ext/sdbm/extconf.rb: disable BADMESS, a library should not emit
	  messages directly.
